--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -2,7 +2,7 @@
 <html class="uk-height-1-1">
 <head>
     <meta charset="utf-8" />
-    <title>登录 - Awesome Python Webapp</title>
+    <title>登录 - 贾韬渊的博客</title>
     <link rel="stylesheet" href="/static/css/uikit.min.css">
     <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
     <script src="/static/js/jquery.min.js"></script>
@@ -42,9 +42,12 @@ $(function() {
     </script>
 </head>
 <body class="uk-height-1-1">
+
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
+
         <div class="uk-vertical-align-middle" style="width: 320px">
-            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">Awesome Python Webapp</a></p>
+
+            <h2>登录</h2>
             <form id="vm" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
                 <div class="uk-alert uk-alert-danger uk-hidden"></div>
                 <div class="uk-form-row">
@@ -63,6 +66,7 @@ $(function() {
                     <button type="submit" class="uk-width-1-1 uk-button uk-button-primary uk-button-large"><i class="uk-icon-sign-in"></i> 登录</button>
                 </div>
             </form>
+            <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">返回首页</a></p>
         </div>
     </div>
 </body>
