--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -15,6 +15,7 @@
     <script src="/static/js/sticky.min.js"></script>
     <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/awesome.js"></script>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     {% block beforehead %}
     <!-- 继承者插入  -->
     {% endblock %}
@@ -28,9 +29,7 @@
             <ul class="uk-navbar-nav">
                 <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
 
-                <li><a href="/manage/blogs"><i class="uk-icon-book"></i> 博文管理</a></li>
-                <li><a href="/manage/users"><i class="uk-icon-book"></i> 用户管理</a></li>
-                <li><a href="/manage/comments"><i class="uk-icon-book"></i> 评论管理</a></li>
+                <li><a href="/about"><i class="uk-icon-adn"></i> 关于</a></li>
                 <li><a target="_blank" href="https://github.com/seeways/awesome-python3-webapp"><i class="uk-icon-code"></i><strong>博客源码</strong></a></li>
             </ul>
             <div class="uk-navbar-flip">
